--- a/pom.xml
+++ b/pom.xml
@@ -79,9 +79,11 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>2.4</version>
         </plugin>
-
-      
-
+        <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-war-plugin</artifactId>
+              <version>3.3.1</version>
+        </plugin>
         <plugin>
           <artifactId>maven-surefire-report-plugin</artifactId>
           <version>2.11</version>
